force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Attachment_ID_Order2__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Attachment_ID_Order2__c</fullName>
    <description>(Optional) Enter a list of comma separated Attachment IDs in the order to be displayed.</description>
    <inlineHelpText>(Facultatif) Entrez une liste d’ID de pièces jointes séparés par des virgules dans l’ordre à afficher.</inlineHelpText>
    <label>Attachment ID Order</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>