force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Attachment_Workflow_Index__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Attachment_Workflow_Index__c</fullName>
    <description>(Optional) Enter a list of comma separated workflow file index.</description>
    <inlineHelpText>(Facultatif) Saisissez une liste d&apos;index de fichiers du workflow séparés par des virgules.</inlineHelpText>
    <label>Attachment Workflow Index</label>
    <length>128</length>
    <type>Text</type>
</CustomField>