force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Cc__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Cc__c</fullName>
    <description>Send an extra copy of signed agreement to these email addresses.</description>
    <inlineHelpText>Envoyez une copie supplémentaire de l’accord signé à ces adresses électroniques.</inlineHelpText>
    <label>Send email copies to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>