force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__DaysUntilSigningDeadline__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__DaysUntilSigningDeadline__c</fullName>
    <description>Specify the number of days until the agreement expires and can no longer be signed.</description>
    <inlineHelpText>Indiquez le nombre de jours avant l’expiration de l’accord, date à laquelle il ne pourra plus être signé.</inlineHelpText>
    <label>Expire document in X days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>