force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Enable_Automatic_Reminders__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Automatic_Reminders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send an automatic weekly or daily reminder to recipients.</description>
    <inlineHelpText>Envoie un rappel quotidien ou hebdomadaire automatique aux destinataires.</inlineHelpText>
    <label>Enable Automatic Reminders</label>
    <type>Checkbox</type>
</CustomField>