force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__PasswordProtectPDF__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__PasswordProtectPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The signed PDF that is sent to all parties is encrypted and this password will be required to open it. Don&apos;t lose the password as it is not recoverable.</description>
    <inlineHelpText>Le fichier PDF envoyé à toutes les parties est crypté et ce mot de passe sera requis pour l’ouvrir. Ne perdez pas votre mot de passe, car il ne peut pas être récupéré.</inlineHelpText>
    <label>Password required to view PDF</label>
    <type>Checkbox</type>
</CustomField>