force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__PreferFax__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__PreferFax__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Lorsque cette case est cochée, Document Cloud envoie le document au numéro de fax du contact. Si ce numéro n’est pas renseigné, Document Cloud envoie le document à l’adresse électronique du contact.</inlineHelpText>
    <label>Send written signatures to fax number</label>
    <type>Checkbox</type>
</CustomField>