force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Rebuild_Recipient_List__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Rebuild_Recipient_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this field to force the basic Adobe Sign agreement and advanced Adobe Sign agreement pages to rebuild the related Recipient List using the Lookup fields on the Agreement record.</description>
    <inlineHelpText>Définissez ce champ pour forcer l’accord Document Cloud de base et les pages de l’accord Document Cloud avancées à reconstruire la liste des destinataires connexe à l’aide des champs de recherche de l’enregistrement d’accord.</inlineHelpText>
    <label>Rebuild Recipient List</label>
    <type>Checkbox</type>
</CustomField>