force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/echosign_dev1__Signing_Deadline__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Signing_Deadline__c</fullName>
    <description>Specify the date when the agreement expires and can no longer be signed.</description>
    <inlineHelpText>Spécifiez la date à laquelle l’accord expirera et ne pourra plus être signé.</inlineHelpText>
    <label>Signing Deadline</label>
    <type>Date</type>
</CustomField>