force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/LPCR_BonAchatPartenaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BonAchatPartenaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bon d&apos;achat partenaire</label>
    <referenceTo>LPCR_BonAchatPartenaire__c</referenceTo>
    <relationshipLabel>Accords</relationshipLabel>
    <relationshipName>Accords</relationshipName>
    <type>Lookup</type>
</CustomField>