force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/LPCR_ContratPartenaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratPartenaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat Partenaire</label>
    <referenceTo>LPCR_ContratPartenaire__c</referenceTo>
    <relationshipLabel>Accords</relationshipLabel>
    <relationshipName>Accords</relationshipName>
    <type>Lookup</type>
</CustomField>