force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/fields/LPCR_Devis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Devis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devis</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Accords</relationshipLabel>
    <relationshipName>Accords</relationshipName>
    <type>Lookup</type>
</CustomField>