force-app/main/default/objects/echosign_dev1__SIGN_Agreement__c/listViews/echosign_dev1__All.listView-meta.xml
<ListView>
    <fullName>echosign_dev1__All</fullName>
    <columns>NAME</columns>
    <columns>echosign_dev1__DateSentDate__c</columns>
    <columns>echosign_dev1__Recipient__c</columns>
    <columns>echosign_dev1__Status__c</columns>
    <columns>echosign_dev1__Document__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>